# logcabin

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  OPTIMIZATION.md  README.md  SConstruct  build_log.md  docker-compose.yml
.github/workflows/: ci.yml
Client/: CMakeLists.txt  LeaderRPCMock.cc
Core/: CMakeLists.txt  ConditionVariable.h  ConditionVariableTest.cc  Config.h  RollingStat.cc
Event/: CMakeLists.txt
Examples/: CMakeLists.txt
Protocol/: CMakeLists.txt  LogConfig.h  Raft.proto  ServerControl.proto
RPC/: CMakeLists.txt  OpaqueServerTest.cc  SConscript  TLS.cc  TLS.h
Server/: CMakeLists.txt  Metrics.cc  Metrics.h  MetricsServer.cc  MetricsServer.h  RaftConsensus.h  SConscript  SnapshotStateMachine.proto  Telemetry.h
Server/WebAdmin/: Server.h
Storage/: CMakeLists.txt  FilesystemUtil.cc  LSMStorage.cc  LSMStorage.h  LogFactoryModule.h  SConscript  SegmentedLog.cc  SegmentedLog.proto  SimpleFileLog.cc  SimpleFileLog.proto  Tool.cc
Tree/: CMakeLists.txt
config/: prometheus.conf  storage.conf
config/grafana/dashboards/: logcabin-dashboard.json
config/grafana/provisioning/dashboards/: logcabin.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/node1/: logcabin.conf
config/node2/: logcabin.conf
config/node3/: logcabin.conf
config/prometheus/: prometheus.yml
k8s/: logcabin.yaml
scripts/: init-cluster.sh
test/: CMakeLists.txt  SConscript
